fixed an issue when sizing down to reponsive mode certain images would overlap text. Fixed that issue by replacing the vh unit used to move items around and replaced it with appropiate padding and margin.

--- a/styles/_about-us.scss
+++ b/styles/_about-us.scss
@@ -5,32 +5,34 @@
   margin-bottom: 100px;
   .about-us-group {
     display: flex;
-    justify-content: center;
     align-items: center;
   }
   .left-sec {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 34vh;
+    height: auto;
     width: 40%;
     h2 {
       font-size: 1.6rem;
       font-weight: 700;
       font-family: $lora;
       text-transform: capitalize;
+      margin-bottom: 20px;
     }
     h3 {
       font-size: 0.73rem;
       font-family: $lora;
       text-transform: capitalize;
+      margin-bottom: 10px;
     }
     p {
       font-size: 0.7rem;
       line-height: 1.1rem;
     }
     .p-two {
-      margin-bottom: 20px;
+      margin-top: 10px;
+      margin-bottom: 25px;
     }
     .button {
       @include button();
@@ -41,12 +43,11 @@
     background-color: #629b4b;
     border-radius: 18px;
     color: white;
-    height: 20vh;
     width: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0 4.375rem 0 1.875rem;
+    padding: 60px 30px;
     line-height: 1.875rem;
     margin-left: 4.6rem;
     position: relative;
