--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -9,6 +9,7 @@ footer {
   }
   .wrapper {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
   }
   h3 {
